@@ -4,6 +4,8 @@ Version 3.20.5 [v3-stable] (rgerhards), 2009-0?-??
   environment detection - thanks to Michael Biebl for the patch
 - fixed a potential segfault problem in gssapi code
   thanks to varmojfekoj for the patch
+- doc enhance: provide standard template for MySQL module and instructions
+  on how to modify schema
 ---------------------------------------------------------------------------
 Version 3.20.4 [v3-stable] (rgerhards), 2009-02-09
 - bugfix: inconsistent use of mutex/atomic operations could cause segfault
